# cardibot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: ci.yml  deploy.yml
docs/: technical-spec.md
docs/planning/: phase1.md
infrastructure/cardibot/: Dockerfile  entrypoint.sh  production-config.toml
src/: archive_threads.rs  audit_sync.rs  bot.rs  cli.rs  clients.rs  commands.rs  config.rs  constants.rs  debug.rs  debug_sync.rs  github.rs  github_app.rs  main.rs  sync.rs
