[package]
name = "cardibot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
octocrab = "0.44"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
